# Kitsune-py

./: .env  .gitignore  AfterImage_extrapolate.c  FeatureExtractor.py  Kitsune.py  README.md  clean_database.py  dockerfile  main.cpp  main.py  pyproject.toml  requirements.txt  st_main.py  try.py
kitsune/: cli.py  simulation.py
kitsune/extractor/: feature_extractor.py
kitsune/helper/: netStat.py
kitsune/kitnet/: KitNET.py  dA.py  kitsune.py
kitsune/pages/: 1_engine.py  2_logs.py  3_charts.py
kitsune/utils/: db.py
tutorial/: 7_maret.md
